tests/paczka1/small_fuzzy/44527869.err
Error in line 3: A746 S337 96,7
Error in line 9: 7qG0 A762 18,06
